--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="bannerText container">
             <h1>Luka FAUGIER</h1>
-            <h3>Développeur Junior</h3>
+            <h2>Développeur Junior</h2>
 
         </div>
     </div>
@@ -42,17 +42,19 @@
         <br>
         <br>
         <h2>À PROPOS</h2>
+        <h3> Luka FAUGIER</h3>
+        <h4> 21 ans</h4>
+        <h4> Développeur Junior</h4>
         <div id ="canva">
             <div id="textPropo" style="display: inline-block">
                 <div class="text">
-                    <h3> Luka FAUGIER</h3>
-                    <h4> 21 ans Développeur Junior</h4>
+
 
                 </div>
                 <p>
                     Je suis actuellement à la recherche d’un premier emploi ou d’une alternance en développeur d’application,<br> mon programme d’étude étant basé sur le développement d’application.
-                    C’est pourquoi j'ai crée se portFolio<br>qui à pour but de me permettre  d’approfondir mes connaissances théoriques et pratiques.
-                    <br><br>Mon parcours scolaire, ainsi que mes premières expériences dans le monde du travail professionnelles en tant <br> que stagiaire, m'ont pleinement convaincu d'acquérir un savoir et des compétences dans le domaine de <br>système numérique, grâce à l’obtention de mon BTS SNIR qui ma pleinement convainque d’avoir trouver<br> ma vocation pour en faire mon futur métier.<br><br>
+                    C’est pourquoi j'ai créé ce portfolio<br>qui a pour but de me permettre  d’approfondir mes connaissances théoriques et pratiques.
+                    <br><br>Mon parcours scolaire, ainsi que mes premières expériences dans le monde professionnel en tant <br> que stagiaire, m'ont pleinement convaincu d'acquérir un savoir et des compétences dans le domaine des <br>systèmes numériques, grâce à l’obtention de mon BTS SNIR qui m'a pleinement convaincu d’avoir trouvé<br> ma vocation pour en faire mon futur métier.<br><br>
                     Je suis très conscient de mes capacités et aussi de ma passion pour ce secteur qui est l’informatique,<br> et le développement de logiciel.<br>
 
                 </p>
@@ -72,7 +74,7 @@
     <div class="heading" >
         <br>
         <br>
-        <h2> DIPLÔME</h2>
+        <h2> DIPLÔMES</h2>
         <div id="diplomeIT" style="display: inline-block;">
             <ul>
                 <div >
@@ -90,7 +92,7 @@
                         <img title="BAC PRO SNIR"  id="diploImage" style="width: 200px; height: 150px" src="image/LogoBacPro.png" >
                     </div>
                     <div id="text" style="display: inline-block; background: #ebebeb; border-radius: 15% " >
-                        <h3>Baccalauréat Profésionnelle </h3><h3>Système numèrique informatique réseaux</h3>
+                        <h3>Baccalauréat Profésionnel </h3><h3>Système numérique informatique réseaux</h3>
                         <p>Lycèe Lasalle à Alès</p>
                     </div>
                 </div>
@@ -137,8 +139,8 @@
                     </div>
                     <div id="text" style="display: inline-block; background:  #bbbbbb; border-radius: 15%" >
                         <h3>Stage à BS modile</h3> <h5>Réparateur</h5>
-                        <p>J’ai effectué 8 semaines de stage,  j’ai réparer différent <br>
-                            télphone  sur tous type de model et de marque.
+                        <p>J’ai effectué 8 semaines de stage,  j’ai réparé différents <br>
+                            téléphone  sur tous type de models et de marques.
                         </p>
                     </div>
                     <br>
@@ -150,7 +152,7 @@
                         <div id="text" style="display: inline-block; background:  #bbbbbb; border-radius: 15%" >
                             <h3>Stage à CGED</h3> <h5></h5>
                             <p>J’ai effectué 2 semaines de stage, j’ai vendu tous types<br>
-                                de produit  électronique ainsi que leur étiquetage.
+                                de produits  électroniques ainsi que leur étiquetage.
                             </p>
                         </div>
                     </div>
@@ -175,7 +177,7 @@
                     </div>
                     <div id="text" style="display: inline-block; background: #bbbbbb ; border-radius: 15%" >
                         <h3>Mail</h3>
-                        <p>faugierluka2000@gmail.com</p>
+                        <p> faugierluka2000@gmail.com </p>
                     </div>
                 </div>
                 <br>
@@ -185,8 +187,7 @@
                     </div>
                     <div id="text" style="display: inline-block; background:  #bbbbbb; border-radius: 15%" >
                         <h3>Téléphone Portable</h3>
-                        <p>07-60-66-45-54
-                        </p>
+                        <p> 07-60-66-45-54   </p>
                     </div>
                 </div>
                 <br>
@@ -203,8 +204,8 @@
             <div class="diplomeImage">
                 <br>
                 <div style="float: end; display: inline-block; position: center">
-                    <a href="https://github.com/Faugier-luka"> <img title="GitHub"  id="diploImage" style="width: 100px; height: 100px" alt="img" src="image/LogoGitHub.png" ></a>
-                    <a href="https://linkedin.com/in/luka-faugier-05879b236/"> <img title="linkedin" id="diploImage" style="width: 70px; height: 70px" alt="img" src="image/LogoLinkedin.png"></a>
+                    <a traget="_blank" href="https://github.com/Faugier-luka"> <img title="GitHub"  id="diploImage" style="width: 100px; height: 100px" alt="img" src="image/LogoGitHub.png" ></a>
+                    <a traget="_blank"href="https://linkedin.com/in/luka-faugier-05879b236/"> <img title="linkedin" id="diploImage" style="width: 70px; height: 70px" alt="img" src="image/LogoLinkedin.png"></a>
                 </div>
             </div>
             <br>
