--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portefolio</title>
     <link rel="stylesheet" href="css/basseDeLaPage.css">
+    <link rel="icon" href="image/LogoPortFolio.png" style="width: 10px; height: 10px;">
 </head>
 <body>
 <header id="Accueil">
