mise a jour des texte

--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
         <ul>
             <li><a href="#Accueil" onclick="menuToggle()" data-text="Accueil">Accueil</a></li>
             <li><a href="#aboutme" onclick="menuToggle()" data-text="Présentation">Présentation</a></li>
-            <li><a href="#" onclick="menuToggle()" data-text="Diplômes">Diplômes</a></li>
-            <li><a href="#" onclick="menuToggle()" data-text="Experience">Experience</a></li>
-            <li><a href="#" onclick="menuToggle()" data-text="Contact">Contact</a></li>
+            <li><a href="#diplome" onclick="menuToggle()" data-text="Diplômes">Diplômes</a></li>
+            <li><a href="#experience" onclick="menuToggle()" data-text="Experience">Experience</a></li>
+            <li><a href="#conctater" onclick="menuToggle()" data-text="Contact">Contact</a></li>
         </ul>
     </div>
 </div>
