--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Porte Folio</title>
     <link rel="stylesheet" href="css/styleCssIndex.css">
     <link rel="stylesheet" href="css/styleAcceuil.css">
     <link rel="stylesheet" href="css/stylePresentation.css">
+    <link rel="icon" href="image/LogoPortFolio.png" style="width: 10px;height: 10px;">
 </head>
 <body>
 
